--- a/less/global.less
+++ b/less/global.less
@@ -49,3 +49,15 @@ img {
     margin: 0 5%;
   }
 }
+
+.display-none {
+  display: none;
+}
+
+.change-color {
+  color: red;
+}
+
+.change-color-again{
+  color: green;
+}
